[gd_scene load_steps=15 format=3 uid="uid://cavk2o4ctghvk"]

[ext_resource type="Script" uid="uid://07igknrhuyay" path="res://scripts/objects/hud.gd" id="1_5ysmq"]
[ext_resource type="Texture2D" uid="uid://h2et6qe150l5" path="res://assets/sprites/coin.png" id="1_ahhtf"]
[ext_resource type="FontFile" uid="uid://b5yockap46ncu" path="res://assets/fonts/PixelOperator8.ttf" id="3_6fi6k"]
[ext_resource type="Texture2D" uid="uid://cvq0vahg1nm2u" path="res://assets/puzzle_game_gfx/Gems/gem_octagon_purple_outline.png" id="6_047uy"]
[ext_resource type="Texture2D" uid="uid://bbf33oarwo80m" path="res://assets/puzzle_game_gfx/Animals/animal_squirrel.png" id="7_5pdws"]
[ext_resource type="Texture2D" uid="uid://btwylfdjio5kr" path="res://assets/sprites/hearts.png" id="8_hd3ao"]
[ext_resource type="Script" uid="uid://b3n3tlrf0jr1e" path="res://scripts/objects/bloch_sphere_3d.gd" id="9_qflrv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oo0fn"]
atlas = ExtResource("1_ahhtf")
region = Rect2(3, 3, 10, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ysmq"]
bg_color = Color(0.0509804, 0.0509804, 0.0509804, 0.227451)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="ViewportTexture" id="ViewportTexture_y5rlc"]
viewport_path = NodePath("BlochSphere")

[sub_resource type="SphereMesh" id="SphereMesh_cmwec"]
radius = 0.3
height = 0.6

[sub_resource type="CylinderMesh" id="CylinderMesh_cmwec"]
top_radius = 0.015
bottom_radius = 0.015
height = 0.5

[sub_resource type="CylinderMesh" id="CylinderMesh_qflrv"]
top_radius = 0.0
bottom_radius = 0.04
height = 0.1

[sub_resource type="AtlasTexture" id="AtlasTexture_0i1j5"]
atlas = ExtResource("8_hd3ao")
region = Rect2(0, 0, 32, 32)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_5ysmq")

[node name="coin" type="TextureRect" parent="."]
offset_left = 336.0
offset_top = 56.0
offset_right = 405.0
offset_bottom = 122.0
texture = SubResource("AtlasTexture_oo0fn")

[node name="Panel" type="Panel" parent="."]
offset_left = 20.0
offset_top = 13.0
offset_right = 2232.0
offset_bottom = 173.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5ysmq")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
offset_left = 416.0
offset_top = 67.0
offset_right = 456.0
offset_bottom = 107.0
theme_override_fonts/font = ExtResource("3_6fi6k")
theme_override_font_sizes/font_size = 40
text = "x"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="."]
offset_left = 120.0
offset_top = 67.0
offset_right = 160.0
offset_bottom = 107.0
theme_override_fonts/font = ExtResource("3_6fi6k")
theme_override_font_sizes/font_size = 40
text = "x"

[node name="CoinsLabel" type="Label" parent="."]
offset_left = 472.0
offset_top = 57.0
offset_right = 600.0
offset_bottom = 121.0
theme_override_fonts/font = ExtResource("3_6fi6k")
theme_override_font_sizes/font_size = 64
text = "##"

[node name="HeartLabel" type="Label" parent="."]
offset_left = 168.0
offset_top = 57.0
offset_right = 296.0
offset_bottom = 121.0
theme_override_fonts/font = ExtResource("3_6fi6k")
theme_override_font_sizes/font_size = 64
text = "##"

[node name="0" type="Label" parent="."]
offset_left = 672.0
offset_top = 112.0
offset_right = 782.0
offset_bottom = 152.0
theme_override_fonts/font = ExtResource("3_6fi6k")
theme_override_font_sizes/font_size = 40
text = "|0>:"

[node name="phi" type="Label" parent="."]
offset_left = 1336.0
offset_top = 112.0
offset_right = 1456.0
offset_bottom = 152.0
theme_override_fonts/font = ExtResource("3_6fi6k")
theme_override_font_sizes/font_size = 40
text = "phi:"

[node name="Percent0" type="Label" parent="."]
offset_left = 814.0
offset_top = 99.0
offset_right = 942.0
offset_bottom = 163.0
theme_override_fonts/font = ExtResource("3_6fi6k")
theme_override_font_sizes/font_size = 64
text = "##"

[node name="phi_value" type="Label" parent="."]
offset_left = 1536.0
offset_top = 104.0
offset_right = 1664.0
offset_bottom = 168.0
theme_override_fonts/font = ExtResource("3_6fi6k")
theme_override_font_sizes/font_size = 64
text = "##"

[node name="Percent1" type="Label" parent="."]
offset_left = 813.0
offset_top = 28.0
offset_right = 941.0
offset_bottom = 92.0
theme_override_fonts/font = ExtResource("3_6fi6k")
theme_override_font_sizes/font_size = 64
text = "##"

[node name="theta_value" type="Label" parent="."]
offset_left = 1536.0
offset_top = 24.0
offset_right = 1664.0
offset_bottom = 88.0
theme_override_fonts/font = ExtResource("3_6fi6k")
theme_override_font_sizes/font_size = 64
text = "##"

[node name="1" type="Label" parent="."]
offset_left = 672.0
offset_top = 40.0
offset_right = 782.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("3_6fi6k")
theme_override_font_sizes/font_size = 40
text = "|1>:"

[node name="theta" type="Label" parent="."]
offset_left = 1328.0
offset_top = 40.0
offset_right = 1518.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("3_6fi6k")
theme_override_font_sizes/font_size = 40
text = "theta:"

[node name="Bloch_Render" type="TextureRect" parent="."]
offset_left = 634.0
offset_top = -186.0
offset_right = 1740.0
offset_bottom = 378.0
texture = SubResource("ViewportTexture_y5rlc")

[node name="BlochSphere" type="SubViewport" parent="."]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(1106, 564)
render_target_update_mode = 4

[node name="BlochSphere3D" type="Node3D" parent="BlochSphere"]
script = ExtResource("9_qflrv")

[node name="Sphere" type="MeshInstance3D" parent="BlochSphere/BlochSphere3D"]
mesh = SubResource("SphereMesh_cmwec")

[node name="Wrapper" type="Node3D" parent="BlochSphere/BlochSphere3D"]

[node name="Arrow" type="MeshInstance3D" parent="BlochSphere/BlochSphere3D/Wrapper"]
mesh = SubResource("CylinderMesh_cmwec")
skeleton = NodePath("../..")

[node name="Arrow Tip" type="MeshInstance3D" parent="BlochSphere/BlochSphere3D/Wrapper/Arrow"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("CylinderMesh_qflrv")

[node name="Camera3D" type="Camera3D" parent="BlochSphere/BlochSphere3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 1.5, 2.5)
fov = 45.0

[node name="X_Label" type="Label" parent="."]
offset_left = 1250.0
offset_top = 90.0
offset_right = 1266.0
offset_bottom = 126.0
theme_override_font_sizes/font_size = 26
text = "X"

[node name="Y_Label" type="Label" parent="."]
offset_left = 1135.0
offset_top = 101.0
offset_right = 1150.0
offset_bottom = 137.0
theme_override_font_sizes/font_size = 26
text = "Y"

[node name="Z_Label" type="Label" parent="."]
offset_left = 1153.0
offset_top = 7.0
offset_right = 1219.0
offset_bottom = 43.0
theme_override_font_sizes/font_size = 26
text = "Z|0>"

[node name="1_Label" type="Label" parent="."]
offset_left = 1161.0
offset_top = 143.0
offset_right = 1212.0
offset_bottom = 179.0
theme_override_font_sizes/font_size = 26
text = "|1 >"

[node name="carried_gate" type="Label" parent="."]
offset_left = 1824.0
offset_top = 56.0
offset_right = 1952.0
offset_bottom = 120.0
theme_override_fonts/font = ExtResource("3_6fi6k")
theme_override_font_sizes/font_size = 64

[node name="gem_carried" type="TextureRect" parent="."]
visible = false
offset_left = 1976.0
offset_top = 40.0
offset_right = 2072.0
offset_bottom = 136.0
texture = ExtResource("6_047uy")
expand_mode = 1

[node name="enemy" type="TextureRect" parent="."]
visible = false
offset_left = 1975.0
offset_top = 38.0
offset_right = 2071.0
offset_bottom = 134.0
texture = ExtResource("7_5pdws")
expand_mode = 1

[node name="heart" type="TextureRect" parent="."]
offset_left = 24.0
offset_top = 48.0
offset_right = 128.0
offset_bottom = 136.0
texture = SubResource("AtlasTexture_0i1j5")
